remove */population/studies/patientcount endpoints
