# functions/analytics-svc/api/swagger/swagger.yaml
@@ -62,55 +62,6 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/Error"
-  /population/studies/patientcount:
-    x-swagger-router-controller: population
-    get:
-      description: Returns results of analytical queries to the frontend
-      operationId: populationStudyQuery
-      produces:
-        - application/json
-      parameters:
-        - name: mriquery
-          in: query
-          type: string
-          description: Filtercard information in bookmark form. This is a binary string encoded in base64
-          required: true
-        - name: releaseDate
-          in: query
-          type: string
-          description: Timestamp of the selected dataset release date (in UTC format)
-          required: false
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/AnalyticsResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/Error"
-  /public/population/studies/patientcount:
-    x-swagger-router-controller: population
-    get:
-      description: Returns results of analytical queries to the frontend
-      operationId: populationStudyQuery
-      produces:
-        - application/json
-      parameters:
-        - name: mriquery
-          in: query
-          type: string
-          description: Filtercard information in bookmark form. This is a binary string encoded in base64
-          required: true
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/AnalyticsResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/Error"
   /population/{dataFormat}/{chartType}:
     x-swagger-router-controller: population
     get:
