# functions/analytics-svc/src/api/controllers/population.ts
@@ -24,114 +24,6 @@ let _stripDbgInfo = (result) => {
 };
 let _processResult = (result) =>
     result && !sqlReturnOn ? _stripDbgInfo(result) : result;
-/**
- * Retrieves list of patient count for each study
- * @param req
- * @param res
- * @param next
- */
-export async function populationStudyQuery(req: IMRIRequest, res, next) {
-    const { analyticsConnection } = req.dbConnections;
-    const user = getUser(req);
-    const language = user.lang;
-    let filterBase64: string = req.query.mriquery;
-    let releaseDate: string = req.query.releaseDate;
-
-    const timestamp = new Date().valueOf();
-    console.log(`time-analytics-svc-populationStudyQuery-${timestamp}`);
-    console.time(`time-analytics-svc-populationStudyQuery-${timestamp}`);
-
-    try {
-        let body = filterBase64
-            ? convertZlibBase64ToJson(filterBase64)
-            : null || req.body;
-
-        if (typeof body === "string") {
-            body = JSON.parse(body);
-        }
-
-        let bookmarkInputStr = JSON.stringify(body);
-
-        body.language = language;
-        // Ensure that the requested studies are valid
-        const acceptedStudies = req.studiesDbMetadata.studies;
-        const isInputStudiesAccepted = body.studies.every((id) =>
-            acceptedStudies.some((obj) => {
-                return obj.id === id;
-            })
-        );
-        if (!isInputStudiesAccepted) {
-            throw new Error("(In populationStudyQuery) Bad study ids input");
-        }
-
-        analyticsConnection.setCurrentUserToDbSession(
-            user.userObject.userId,
-            async (err, data) => {
-                if (err) {
-                    return console.error(err);
-                }
-                analyticsConnection.setTemporalSystemTimeToDbSession(
-                    releaseDate,
-                    async (err, data) => {
-                        if (err) {
-                            return console.error(err);
-                        }
-                        try {
-                            const datasetIds = body.studies;
-                            function _sendResult(err, result) {
-                                if (err) {
-                                    return res.status(500).send(
-                                        MRIEndpointErrorHandler({
-                                            err,
-                                            language,
-                                        })
-                                    );
-                                }
-                                console.timeEnd(
-                                    `time-analytics-svc-populationStudyQuery-${timestamp}`
-                                );
-                                res.status(200).send(result);
-                            }
-
-                            if (body.filter) {
-                                new PatientCountEndpoint(analyticsConnection)
-                                    .processMultipleStudyRequest(
-                                        req,
-                                        datasetIds,
-                                        bookmarkInputStr,
-                                        language
-                                    )
-                                    .then((res) => _sendResult(null, res))
-                                    .catch((err) => _sendResult(err, null));
-                            } else {
-                                new PatientCountEndpoint(analyticsConnection)
-                                    .processMultipleStudyRequest(
-                                        req,
-                                        datasetIds,
-                                        body,
-                                        language
-                                    )
-                                    .then((res) => _sendResult(null, res))
-                                    .catch((err) => _sendResult(err, null));
-                            }
-                        } catch (err) {
-                            console.timeEnd(
-                                `time-query-svc-populationStudyQuery-${timestamp}`
-                            );
-                            return res
-                                .status(500)
-                                .send(
-                                    MRIEndpointErrorHandler({ err, language })
-                                );
-                        }
-                    }
-                );
-            }
-        );
-    } catch (err) {
-        res.status(500).send(MRIEndpointErrorHandler({ err, language }));
-    }
-}
 
 /**
  * Retrieves list of cohort definitions
